--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ pollster = "0.2"
 raw-window-handle = "0.3"
 thiserror = "1.0"
 ultraviolet = "0.8"
-wgpu = "0.9"
+wgpu = { git = "gttps://github.com/repnop/wgpu", branch = "scissor-fix" }
 
 [dev-dependencies]
 pixels-mocks = { path = "internals/pixels-mocks" }
